--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
+    "framer-motion": "^12.7.3",
+    "geist": "^1.3.1",
     "google": "link:@next/third-parties/google",
     "hast-util-to-jsx-runtime": "^2.3.2",
     "lucide-react": "^0.475.0",
